--- a/pom.xml
+++ b/pom.xml
@@ -54,11 +54,11 @@
     </dependencies>
     <distributionManagement>
         <repository>
-            <id>deploymentRepo</id>
-            <name>Nexus Repository</name>
-            <url>http://localhost:8081/repository/maven-releases/</url>
+            <id>nexus-repo</id>
+            <url>http://192.168.50.4:8081/repository/devops/</url>
         </repository>
     </distributionManagement>
+
     <build>
         <plugins>
             <plugin>
