--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
     <distributionManagement>
         <repository>
             <id>nexus-repo</id>
-            <url>http://192.168.50.4:8081/repository/devops/</url>
+            <url>http://localhost:8081/repository/maven-releases/</url>
         </repository>
     </distributionManagement>
 
