--- a/pom.xml
+++ b/pom.xml
@@ -54,11 +54,11 @@
     </dependencies>
     <distributionManagement>
         <repository>
-            <id>deploymentRepo</id> <!-- This ID must match what is configured in your Maven settings.xml -->
-            <url>http://192.168.50.4:8081/repository/maven-releases/</url> <!-- Replace with your repository URL -->
-        </repository>:
+            <id>deploymentRepo</id>
+            <name>Nexus Repository</name>
+            <url>http://localhost:8081/repository/maven-releases/</url>
+        </repository>
     </distributionManagement>
-
     <build>
         <plugins>
             <plugin>
