--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     depends_on:
       - mysqldb
     build: .
-    image: feryeljawedi/spring_projet:1.0.0
+    image: feryeljawedi/spring_projet
     restart: on-failure
     ports:
       - "8083:8083"
