--- a/pom.xml
+++ b/pom.xml
@@ -59,9 +59,10 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
+
 
     </dependencies>
 
@@ -79,8 +80,19 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <includes>
+                        <include>**/*Test*.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
         </plugins>
+
     </build>
+
     <distributionManagement>
         <repository>
             <id>deploymentRepo</id>
